--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
-    "core-js": "3"
+    "core-js": "3",
+    "stickyfilljs": "^2.1.0"
   },
   "browserslist": [
     "> 1%",
